# opencl-demo

./: .gitignore  CMakeLists.txt  README.md  pom.xml
cmake/: FindCLBLAS.cmake
devinfo/: CMakeLists.txt  devinfo.cpp
matmul/: build.sbt  build.sh
matmul/src/main/scala/io/spinor/: NativeLibrary.scala
native/: CMakeLists.txt
native/cmake/: FindOpenCL.cmake
nbody-simul/: pom.xml
nbody-simul/src/main/resources/: matrixmul.cl
nbody-simul/src/main/scala/io/spinor/nbodysimul/: NBodySimulation.scala
oclnative/: CMakeLists.txt  pom.xml
oclnative/src/main/cpp/: oclnative.cpp  oclnative.h
oclnative/src/main/java/io/spinor/oclnative/: OclNative.java
oclnative/src/main/java/io/spinor/oclnative/ocl/: CommandQueue.java  Context.java  Device.java  Platform.java
oclnative/src/main/resources/: macosx-x86_64-oclnative.properties
